# pycui-utils

./: .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: main.yml
src/pycui_utils/: __init__.py  categories.py  exceptions.py  filters.py  loader.py  organizations.py
src/pycui_utils/models/: __init__.py  models.py
src/pycui_utils/tests/: test_general.py
tests/: test_categories.py
