[project]
name = "pycui-utils"
authors = [
    { name = "brehldev", email = "github@brehl.dev" }
]
version = "0.1.0"
description = "Python library for managing Controlled Unclassified Information (CUI) categories and their metadata."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
keywords = [
    "CUI",
    "Controlled Unclassified Information",
    "CUI categories",
    "CUI markings",
    "DoD",
    "Department of Defense",
    "NARA",
    "CUI registry",
    "information security",
    "data classification",
    "document marking",
    "unclassified information",
    "CUI banner",
    "CUI designation",
    "federal information",
    "sensitive information",
    "CNSI",
    "controlled information",
    "CUI program",
    "DoD instruction",
    "email markings",
    "document control",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "coverage>=7.13.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.9",
    "ty>=0.0.6",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ty.rules]
index-out-of-bounds = "ignore"

[tool.black]
line-length = 120
target-version = ['py314']

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "ISC",
    "B",
    "C4",
    "UP",
    "ARG001",
    "C4",
    "PTH",
    "TID",
    "SIM",
    "ICN"
]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    "tests"
]
ignore = [
    "B008",
    "W191",
    "B904",
    "D417"
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pydoclint]
# Skip docstrings which fit on a single line.
ignore-one-line-docstrings = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "SIM"]
